--- a/aboutcode.html
+++ b/aboutcode.html
@@ -46,7 +46,7 @@
     </article>
 
     <aside>
-      <img src="logic.jpg" alt="Computer code displayed on a screen">
+      <img src="logicpic.jpg" alt="Computer code displayed on a screen">
       <p class="caption">Code is written in different languages, but all follow logical patterns.</p>
     </aside>
   </main>
