--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="code.jpg" alt="Laptop screen showing code">
         <img src="piccode.jpg" alt="coding screen">
   	    <img src="project.jpg" alt="coding project screenshot">
-  	    <img src="projectpic.jpg.png" alt="coding project screenshot">
+  	    <img src="projectpic.jpg" alt="coding project screenshot">
   	    <img src="csspic.jpg" alt="coding project screenshot">
 
 
