--- a/aboutcode.html
+++ b/aboutcode.html
@@ -5,44 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How Coding Works</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-
   <header>
-    <h1>The Joy of Coding</h1>
-     <nav>
-      <ul>
+    <h1 id="mainTitle">The Joy of Coding</h1>
+    <button id="changeTextBtn">Change Title</button>
+    <button id="colorBtn">Change Background Box</button>
+    <button id="menuToggle" class="menu-icon">
+      <svg width="30" height="30" viewBox="0 0 24 24">
+        <path d="M3 6h18M3 12h18M3 18h18" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+    </button>
+    <nav>
+      <ul id="navMenu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">How Coding Works</a></li>
         <li><a href="history.html">History</a></li>
       </ul>
     </nav>
-     
   </header>
+
+  <p id="dayMessage" style="font-weight:bold; text-align:center; margin-bottom:20px;"></p>
+
+  <div id="colorBox" style="width:100%; height:80px; background:#FF69B4; margin-bottom:20px; border-radius:8px;"></div>
 
   <main class="grid-layout">
     <article>
       <h2>How Coding Works</h2>
-      <p>
-      	Coding is the process of giving a computer a set of instructions that it can understand and carry out. 
-        The rules and structure of each programming language, including Python, Java, and C++, are referred to as syntax. 
-        When a programmer writes code, the computer follows logical steps to accomplish a task by reading and executing each instruction in order.
-      </p>
-      <p>
-        What makes coding special is that even simple actions, like displaying text on a screen or adding two numbers, 
-        rely on layers of logic beneath the surface. Computers only carry out precise instructions; they do not think in the same way that people do. Because of this, accuracy is crucial. A single mistake, such as omitting a semicolon, can cause a whole program to malfunction.
-      </p>
-      <p>
-        Some languages are designed to be easier for humans to read, while others are closer to the computer’s native 
-        binary language of ones and zeros. For example, Python uses simple words and spacing to make programs more readable, 
-        while languages like C require detailed instructions for memory and performance. No matter the language, 
-        coding always involves translating human ideas into logical commands that machines can process.
-      </p>
-      <p>
-        In the end, coding is both a science and an art. It’s about problem solving, structure, and clear communication. 
-        The more I learn about how code turns ideas into action, the more I appreciate how powerful and precise 
-        computer science really is.
-      </p>
+      <p>Coding is the process of giving a computer a set of instructions that it can understand and carry out. The rules and structure of each programming language, including Python, Java, and C++, are referred to as syntax. When a programmer writes code, the computer follows logical steps to accomplish a task by reading and executing each instruction in order.</p>
+      <p>What makes coding special is that even simple actions, like displaying text on a screen or adding two numbers, rely on layers of logic beneath the surface. Computers only carry out precise instructions; they do not think in the same way that people do. Because of this, accuracy is crucial. A single mistake, such as omitting a semicolon, can cause a whole program to malfunction.</p>
+      <p>Some languages are designed to be easier for humans to read, while others are closer to the computer’s native binary language of ones and zeros. For example, Python uses simple words and spacing to make programs more readable, while languages like C require detailed instructions for memory and performance. No matter the language, coding always involves translating human ideas into logical commands that machines can process.</p>
+      <p>In the end, coding is both a science and an art. It’s about problem solving, structure, and clear communication. The more I learn about how code turns ideas into action, the more I appreciate how powerful and precise computer science really is.</p>
     </article>
 
     <aside>
@@ -56,3 +50,5 @@
   </footer>
 </body>
 </html>
+
+
