--- a/history.html
+++ b/history.html
@@ -5,12 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Evolution of Computer Science</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>The Joy of Coding</h1>
+    <h1 id="mainTitle">The Joy of Coding</h1>
+    <button id="changeTextBtn">Change Title</button>
+    <button id="colorBtn">Change Background Box</button>
+    <button id="menuToggle" class="menu-icon">
+      <svg width="30" height="30" viewBox="0 0 24 24">
+        <path d="M3 6h18M3 12h18M3 18h18" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+    </button>
     <nav>
-      <ul>
+      <ul id="navMenu">
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutcode.html">How Coding Works</a></li>
         <li><a href="history.html" class="active">History</a></li>
@@ -18,25 +26,18 @@
     </nav>
   </header>
 
+  <p id="dayMessage" style="font-weight:bold; text-align:center; margin-bottom:20px;"></p>
+
+  <div id="colorBox" style="width:100%; height:80px; background:#FF69B4; margin-bottom:20px; border-radius:8px;"></div>
+
   <main class="grid">
     <article>
       <h2>The Evolution of Computer Science</h2>
-      <p>
-      	Over the past 200 years, computer science has advanced quickly, beginning with mathematical ideas and developing into the intricate field it is today. Ada Lovelace laid the foundation for contemporary programming in the 1800s by writing what is regarded as the first algorithm designed for a machine.
-      
-      </p>
-      <p>
-        Alan Turing proposed the idea of a universal machine that could replicate any computation in the 20th century. His theories influenced the theoretical foundation of computation and algorithms and served as the basis for contemporary computers.      </p>
-      <p>
-        As technology progressed, early programming languages like Fortran, COBOL, and C emerged, each designed to solve specific types of problems efficiently. Computers became faster and more powerful, enabling the rise of software applications, operating systems, and eventually the internet.
-      </p>
-      <p>
-      	These days, computer science includes a broad range of areas, including data science, web development, cybersecurity, and artificial intelligence. The field's development shows how logical reasoning, creativity, and problem-solving have a significant influence on modern technology.  
-    
-      </p>
-      <p>
-        Understanding the history of computer science helps us appreciate the challenges that early programmers faced and the breakthroughs that made modern coding possible. It also shows how the field continues to grow and adapt, offering endless opportunities for learning and discovery.
-      </p>
+      <p>Over the past 200 years, computer science has advanced quickly, beginning with mathematical ideas and developing into the intricate field it is today. Ada Lovelace laid the foundation for contemporary programming in the 1800s by writing what is regarded as the first algorithm designed for a machine.</p>
+      <p>Alan Turing proposed the idea of a universal machine that could replicate any computation in the 20th century. His theories influenced the theoretical foundation of computation and algorithms and served as the basis for contemporary computers.</p>
+      <p>As technology progressed, early programming languages like Fortran, COBOL, and C emerged, each designed to solve specific types of problems efficiently. Computers became faster and more powerful, enabling the rise of software applications, operating systems, and eventually the internet.</p>
+      <p>These days, computer science includes a broad range of areas, including data science, web development, cybersecurity, and artificial intelligence. The field's development shows how logical reasoning, creativity, and problem-solving have a significant influence on modern technology.</p>
+      <p>Understanding the history of computer science helps us appreciate the challenges that early programmers faced and the breakthroughs that made modern coding possible. It also shows how the field continues to grow and adapt, offering endless opportunities for learning and discovery.</p>
     </article>
 
     <aside>
@@ -50,3 +51,5 @@
   </footer>
 </body>
 </html>
+
+
